Added comprehensive recipe search endpoint. (#34)